[gd_scene load_steps=24 format=3]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]
[ext_resource type="Texture2D" path="res://assets/icons/stop.svg" id="icon_stop"]
[ext_resource type="Texture2D" path="res://assets/icons/pause.svg" id="icon_pause"]
[ext_resource type="Texture2D" path="res://assets/icons/fullscreen.svg" id="icon_fullscreen"]
[ext_resource type="Texture2D" path="res://assets/icons/play.svg" id="icon_play"]
[ext_resource type="Texture2D" path="res://assets/icons/arrow_vertical.svg" id="icon_arrow_v"]
[ext_resource type="Texture2D" path="res://assets/icons/arrow_horizontal.svg" id="icon_arrow_h"]
[ext_resource type="Texture2D" path="res://assets/icons/trophy.png" id="icon_trophy"]
[ext_resource type="Texture2D" path="res://assets/icons/score.svg" id="icon_score"]
[ext_resource type="Texture2D" path="res://assets/icons/ball.png" id="icon_ball"]
[ext_resource type="Texture2D" path="res://assets/icons/lives.svg" id="icon_lives"]
[ext_resource type="Texture2D" path="res://assets/icons/time.svg" id="icon_time"]
[ext_resource type="Texture2D" path="res://assets/icons/filled.svg" id="icon_filled"]
[ext_resource type="Texture2D" path="res://assets/icons/play_green.svg" id="icon_play_green"]
[ext_resource type="Texture2D" path="res://assets/icons/gameover.png" id="icon_gameover"]
[ext_resource type="Texture2D" path="res://assets/icons/leaderboard.svg" id="icon_leaderboard"]
[ext_resource type="Texture2D" path="res://assets/icons/help.svg" id="icon_help"]
[ext_resource type="Texture2D" path="res://assets/icons/share.svg" id="icon_share"]
[ext_resource type="Texture2D" path="res://assets/icons/settings.svg" id="icon_settings"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_overlay"]
bg_color = Color(1, 1, 1, 0.97)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 0.6)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
shadow_color = Color(0, 0, 0, 0.15)
shadow_size = 20
shadow_offset = Vector2(0, 8)
content_margin_left = 40.0
content_margin_top = 30.0
content_margin_right = 40.0
content_margin_bottom = 30.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_impressum"]
bg_color = Color(1, 1, 1, 0.97)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 0.6)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
shadow_color = Color(0, 0, 0, 0.15)
shadow_size = 20
shadow_offset = Vector2(0, 8)
content_margin_left = 40.0
content_margin_top = 30.0
content_margin_right = 40.0
content_margin_bottom = 30.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_red"]
bg_color = Color(0.86, 0.15, 0.15, 1)
border_width_top = 2
border_color = Color(1, 0.5, 0.5, 0.6)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0.6, 0.1, 0.1, 0.3)
shadow_size = 6
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_red_hover"]
bg_color = Color(0.92, 0.2, 0.2, 1)
border_width_top = 2
border_color = Color(1, 0.6, 0.6, 0.7)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0.6, 0.1, 0.1, 0.4)
shadow_size = 8
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_share_logs"]
bg_color = Color(1, 1, 1, 0.2)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_volume_popup"]
bg_color = Color(0.165, 0.204, 0.255, 0.95)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
content_margin_left = 12.0
content_margin_top = 8.0
content_margin_right = 12.0
content_margin_bottom = 8.0

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hud")

[node name="TopBarBg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 28.0
grow_horizontal = 2
color = Color(0.165, 0.204, 0.255, 0.95)

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 5.0
offset_right = -60.0
offset_bottom = 28.0
grow_horizontal = 2

[node name="ScoreBox" type="HBoxContainer" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
theme_override_constants/separation = 4

[node name="Icon" type="TextureRect" parent="TopBar/ScoreBox"]
custom_minimum_size = Vector2(20, 20)
custom_maximum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("icon_score")
expand_mode = 1
stretch_mode = 5

[node name="ScoreLabel" type="Label" parent="TopBar/ScoreBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "0"

[node name="LevelBox" type="HBoxContainer" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
theme_override_constants/separation = 4

[node name="Icon" type="TextureRect" parent="TopBar/LevelBox"]
custom_minimum_size = Vector2(20, 20)
custom_maximum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("icon_ball")
expand_mode = 1
stretch_mode = 5

[node name="LevelLabel" type="Label" parent="TopBar/LevelBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "1"

[node name="LivesBox" type="HBoxContainer" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
theme_override_constants/separation = 4

[node name="Icon" type="TextureRect" parent="TopBar/LivesBox"]
custom_minimum_size = Vector2(28, 28)
custom_maximum_size = Vector2(28, 28)
layout_mode = 2
texture = ExtResource("icon_lives")
expand_mode = 1
stretch_mode = 5

[node name="LivesLabel" type="Label" parent="TopBar/LivesBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "3"

[node name="TimeBox" type="HBoxContainer" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
theme_override_constants/separation = 4

[node name="Icon" type="TextureRect" parent="TopBar/TimeBox"]
custom_minimum_size = Vector2(20, 20)
custom_maximum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("icon_time")
expand_mode = 1
stretch_mode = 5

[node name="TimeLabel" type="Label" parent="TopBar/TimeBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "90"

[node name="FillBox" type="HBoxContainer" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
theme_override_constants/separation = 4

[node name="Icon" type="TextureRect" parent="TopBar/FillBox"]
custom_minimum_size = Vector2(20, 20)
custom_maximum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("icon_filled")
expand_mode = 1
stretch_mode = 5

[node name="FillLabel" type="Label" parent="TopBar/FillBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "0%"

[node name="TopRightButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 965.0
offset_right = 1019.0
offset_top = 33.0
offset_bottom = 258.0
theme_override_constants/separation = 3

[node name="StopButton" type="Button" parent="TopRightButtons"]
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
icon = ExtResource("icon_stop")
icon_alignment = 1

[node name="PauseButton" type="Button" parent="TopRightButtons"]
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
icon = ExtResource("icon_pause")
icon_alignment = 1

[node name="VolumeButton" type="Button" parent="TopRightButtons"]
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
icon = ExtResource("icon_settings")
icon_alignment = 1

[node name="FullscreenButton" type="Button" parent="TopRightButtons"]
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
icon = ExtResource("icon_fullscreen")
icon_alignment = 1

[node name="HelpButton" type="Button" parent="TopRightButtons"]
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
icon = ExtResource("icon_help")
icon_alignment = 1

[node name="VolumePopup" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 0
offset_left = 800.0
offset_top = 225.0
offset_right = 960.0
offset_bottom = 275.0
theme_override_styles/panel = SubResource("StyleBoxFlat_volume_popup")

[node name="VBox" type="VBoxContainer" parent="VolumePopup"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Label" type="Label" parent="VolumePopup/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.8)
theme_override_font_sizes/font_size = 11
text = "Volume"

[node name="SliderContainer" type="Control" parent="VolumePopup/VBox"]
custom_minimum_size = Vector2(120, 20)
layout_mode = 2

[node name="TriangleBg" type="Polygon2D" parent="VolumePopup/VBox/SliderContainer"]
color = Color(1, 1, 1, 0.15)
polygon = PackedVector2Array(0, 18, 120, 2, 120, 18)

[node name="VolumeSlider" type="HSlider" parent="VolumePopup/VBox/SliderContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
min_value = 0.0
max_value = 1.0
step = 0.01
value = 0.3

[node name="ImpressumButton" type="LinkButton" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_right = 1.0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 44.0
offset_top = -170.0
offset_right = 56.0
offset_bottom = -104.0
grow_horizontal = 0
grow_vertical = 0
rotation = -1.5708
pivot_offset = Vector2(6, 33)
theme_override_colors/font_color = Color(0.55, 0.55, 0.55, 1)
theme_override_font_sizes/font_size = 9
text = "Impressum"
underline = 2
alignment = 2

[node name="DirectionButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -59.0
offset_top = -63.0
offset_right = -5.0
offset_bottom = -9.0
grow_horizontal = 0
grow_vertical = 0
custom_minimum_size = Vector2(54, 54)
icon = ExtResource("icon_arrow_v")
icon_alignment = 1

[node name="PauseOverlay" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="PauseOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="PanelContainer" parent="PauseOverlay/CenterContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_overlay")

[node name="Label" type="Label" parent="PauseOverlay/CenterContainer/Panel"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "Paused"
horizontal_alignment = 1

[node name="GameOverSplash" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="GameOverSplash"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="PanelContainer" parent="GameOverSplash/CenterContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_overlay")

[node name="VBox" type="VBoxContainer" parent="GameOverSplash/CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="GameOverIcon" type="TextureRect" parent="GameOverSplash/CenterContainer/Panel/VBox"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("icon_gameover")
expand_mode = 1
stretch_mode = 5

[node name="GameOverLabel" type="Label" parent="GameOverSplash/CenterContainer/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.1, 0.1, 1)
theme_override_font_sizes/font_size = 32
text = "Game Over"
horizontal_alignment = 1

[node name="GameOverOverlay" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="GameOverOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="PanelContainer" parent="GameOverOverlay/CenterContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_overlay")

[node name="HBox" type="HBoxContainer" parent="GameOverOverlay/CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="TrophyIcon" type="TextureRect" parent="GameOverOverlay/CenterContainer/Panel/HBox"]
custom_minimum_size = Vector2(120, 160)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("icon_trophy")
expand_mode = 1
stretch_mode = 5

[node name="VBox" type="VBoxContainer" parent="GameOverOverlay/CenterContainer/Panel/HBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ScrollContainer" type="ScrollContainer" parent="GameOverOverlay/CenterContainer/Panel/HBox/VBox"]
custom_minimum_size = Vector2(500, 400)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="EntriesContainer" type="VBoxContainer" parent="GameOverOverlay/CenterContainer/Panel/HBox/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="LoadingLabel" type="Label" parent="GameOverOverlay/CenterContainer/Panel/HBox/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
text = "Loading..."
horizontal_alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="GameOverOverlay/CenterContainer/Panel/HBox/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8

[node name="ShareButton" type="Button" parent="GameOverOverlay/CenterContainer/Panel/HBox/VBox/ButtonsContainer"]
custom_minimum_size = Vector2(120, 48)
layout_mode = 2
icon = ExtResource("icon_share")
text = "Share
my score"

[node name="NewGameButton" type="Button" parent="GameOverOverlay/CenterContainer/Panel/HBox/VBox/ButtonsContainer"]
custom_minimum_size = Vector2(200, 48)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_button_red")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_red_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_red")
theme_override_styles/focus = SubResource("StyleBoxFlat_button_red")
icon = ExtResource("icon_play")
icon_alignment = 1
expand_icon = true

[node name="LevelCompleteOverlay" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="LevelCompleteOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="PanelContainer" parent="LevelCompleteOverlay/CenterContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_overlay")

[node name="VBox" type="VBoxContainer" parent="LevelCompleteOverlay/CenterContainer/Panel"]
custom_minimum_size = Vector2(300, 180)
layout_mode = 2
theme_override_constants/separation = 4

[node name="Trophy" type="TextureRect" parent="LevelCompleteOverlay/CenterContainer/Panel/VBox"]
custom_minimum_size = Vector2(120, 160)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("icon_trophy")
expand_mode = 1
stretch_mode = 5

[node name="LevelLabel" type="Label" parent="LevelCompleteOverlay/CenterContainer/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "Level 1 Complete!"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="LevelCompleteOverlay/CenterContainer/Panel/VBox"]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2

[node name="ScoreBox" type="HBoxContainer" parent="LevelCompleteOverlay/CenterContainer/Panel/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 8

[node name="Icon" type="TextureRect" parent="LevelCompleteOverlay/CenterContainer/Panel/VBox/ScoreBox"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("icon_score")
expand_mode = 1
stretch_mode = 5

[node name="ScoreLabel" type="Label" parent="LevelCompleteOverlay/CenterContainer/Panel/VBox/ScoreBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "0"

[node name="FillBonusBox" type="HBoxContainer" parent="LevelCompleteOverlay/CenterContainer/Panel/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 8

[node name="Icon" type="TextureRect" parent="LevelCompleteOverlay/CenterContainer/Panel/VBox/FillBonusBox"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("icon_filled")
expand_mode = 1
stretch_mode = 5

[node name="FillBonusLabel" type="Label" parent="LevelCompleteOverlay/CenterContainer/Panel/VBox/FillBonusBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "+0"

[node name="LivesBonusBox" type="HBoxContainer" parent="LevelCompleteOverlay/CenterContainer/Panel/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 8

[node name="Icon" type="TextureRect" parent="LevelCompleteOverlay/CenterContainer/Panel/VBox/LivesBonusBox"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("icon_lives")
expand_mode = 1
stretch_mode = 5

[node name="LivesBonusLabel" type="Label" parent="LevelCompleteOverlay/CenterContainer/Panel/VBox/LivesBonusBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "+0"

[node name="ImpressumOverlay" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="ImpressumOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
color = Color(0, 0, 0, 0.5)

[node name="CenterContainer" type="CenterContainer" parent="ImpressumOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="ImpressumOverlay/CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_impressum")

[node name="VBox" type="VBoxContainer" parent="ImpressumOverlay/CenterContainer/Panel"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="ImpressumOverlay/CenterContainer/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Impressum"
horizontal_alignment = 1

[node name="Content" type="Label" parent="ImpressumOverlay/CenterContainer/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Stefan Schimanski
Gehmerweg 9a
64291 Darmstadt

E-Mail: kbounce@1stein.org

Recreation of the KDE KBounce
using Godot 4.5."
horizontal_alignment = 1

[node name="WebsiteLink" type="LinkButton" parent="ImpressumOverlay/CenterContainer/Panel/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.2, 0.4, 0.8, 1)
theme_override_colors/font_hover_color = Color(1.0, 0.5, 0.0, 1)
theme_override_font_sizes/font_size = 14
text = "kbounce.app"
uri = "https://kbounce.app"

[node name="CloseButton" type="Button" parent="ImpressumOverlay/CenterContainer/Panel/VBox"]
custom_minimum_size = Vector2(120, 48)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_button_red")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_red_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_red")
theme_override_styles/focus = SubResource("StyleBoxFlat_button_red")
text = "Close"

[node name="HelpOverlay" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="HelpOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
color = Color(0, 0, 0, 0.5)

[node name="CenterContainer" type="CenterContainer" parent="HelpOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="HelpOverlay/CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_impressum")

[node name="VBox" type="VBoxContainer" parent="HelpOverlay/CenterContainer/Panel"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="HelpOverlay/CenterContainer/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Rules"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="HelpOverlay/CenterContainer/Panel/VBox"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="Content" type="Label" parent="HelpOverlay/CenterContainer/Panel/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "Game
1. Fill 75% of the field to advance.
2. Game over when lives reach zero or time runs out.

Lives
3. Start with one life per ball.
4. Lose a life if a ball hits the inner part of a building wall.

Balls
5. Each level adds one more ball.
6. Balls reflect off borders, filled walls, and building walls.

Walls
7. Tap/click to build a wall. Swipe to change direction.
8. Two wall halves can build at once.
9. A wall half finishes when its tip reaches a border, filled wall, or another building wall.
10. Ball hitting the tip finishes the wall shortened.
11. A wall half is removed if a ball hits the inner part (non-tip).

Built with:
Godot Engine
Copyright (c) 2014-present Godot Engine contributors.
License: MIT (godotengine.org/license)"
autowrap_mode = 3

[node name="BottomRow" type="HBoxContainer" parent="HelpOverlay/CenterContainer/Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="LeftSpacer" type="Control" parent="HelpOverlay/CenterContainer/Panel/VBox/BottomRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ReportBugButton" type="Button" parent="HelpOverlay/CenterContainer/Panel/VBox/BottomRow"]
custom_minimum_size = Vector2(120, 48)
layout_mode = 2
text = "Report Bug"

[node name="CloseButton" type="Button" parent="HelpOverlay/CenterContainer/Panel/VBox/BottomRow"]
custom_minimum_size = Vector2(120, 48)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_button_red")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_red_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_red")
theme_override_styles/focus = SubResource("StyleBoxFlat_button_red")
text = "Close"

[node name="VersionLabel" type="Label" parent="HelpOverlay/CenterContainer/Panel/VBox/BottomRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 10
horizontal_alignment = 2
vertical_alignment = 1

[node name="ShareLogsButton" type="Button" parent="HelpOverlay"]
layout_mode = 1
anchors_preset = 2
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -75.0
offset_right = 110.0
offset_bottom = -50.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.5)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0.5)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0.5)
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_share_logs")
theme_override_styles/hover = SubResource("StyleBoxFlat_share_logs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_share_logs")
icon = ExtResource("icon_share")
text = "Logs"
expand_icon = true
